trunk/Archive2/31/51241754b64e53/output
main.cpp:24:19: error: used type 'struct birthyear' where arithmetic or pointer type is required
  p1.pbirthyear = (struct birthyear) age; 
                  ^                  ~~~
main.cpp:26:18: warning: format specifies type 'int' but the argument has type 'struct birthyear' [-Wformat]
  printf("%i\n", p1.pbirthyear);
          ~~     ^~~~~~~~~~~~~
main.cpp:29:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
2 warnings and 1 error generated.
